infrastructure/01-system/cilium/hubble-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: hubble
  labels:
    kubernetes.io/metadata.name: hubble
  annotations:
    argocd.argoproj.io/sync-wave: "-10"
